po: update po/sr_RS@latin/contribute.po (pulled from Transifex.net by CiviCRM l10n maintainer)

--- a/po/sr_RS@latin/contribute.po
+++ b/po/sr_RS@latin/contribute.po
@@ -9,7 +9,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2016-10-05 11:33-0400\n"
-"PO-Revision-Date: 2017-02-27 16:01+0000\n"
+"PO-Revision-Date: 2017-02-28 11:06+0000\n"
 "Last-Translator: Marinela Panić <marinela@catalystbalkans.org>\n"
 "Language-Team: Serbian (Latin) (Serbia) (http://www.transifex.com/civicrm/civicrm/language/sr_RS@latin/)\n"
 "MIME-Version: 1.0\n"
@@ -1932,7 +1932,7 @@ msgid ""
 "before you can use Batch Update via Profile. Navigate to Administer CiviCRM "
 "> Customize Data and Screens > CiviCRM Profile to configure a Profile. "
 "Consult the online Administrator documentation for more information."
-msgstr "Moraćete da kreirate Profil koji sadrži %1 polja koja želite da uredite pre nego što možete koristiti opciju Serijsko ažuriranje preko profila. Idite na Administriraj CiviCRM > Sopstvena podešavanja podataka i ekrana > Prolifi da biste podesili profil. Za više informacija pogledajte dokumentaciju za online administratora."
+msgstr "Moraćete da kreirate Profil koji sadrži %1 polja koja želite da uredite pre nego što možete koristiti opciju Serijsko ažuriranje preko profila. Idite na Administriraj CiviCRM > Sopstvena podešavanja podataka i ekrana > CiviCRM Profil da biste podesili profil. Za više informacija pogledajte dokumentaciju za online administratora."
 
 #: CRM/Contribute/Form/Task/PickProfile.php
 msgid "Profile Required"
@@ -3014,7 +3014,7 @@ msgid ""
 "Price sets allow you to configure more complex contribution options (e.g. "
 "\"Contribute $25 more to receive our monthly magazine.\"). Click <a "
 "href='%1'>here</a> if you want to configure price sets for your site."
-msgstr "Nijedan Set cena donacija nije konfigurisan/omogućen za vaš sajt. Setovi cena vam omogućuju da podesite složenije zopcije za doniranje (npr. \"Donirajte još 25$ da biste dobijali naš mesečni magazin\"). Kliknite <a href='%1'>ovde</a> ukoliko želite da konfigurišete setove cena za vaš sajt."
+msgstr "Nijedan Set cena donacija nije konfigurisan/omogućen za vaš sajt. Setovi cena vam omogućuju da podesite složenije opcije za doniranje (npr. \"Donirajte još 25$ da biste dobijali naš mesečni magazin\"). Kliknite <a href='%1'>ovde</a> ukoliko želite da konfigurišete setove cena za vaš sajt."
 
 #: templates/CRM/Contribute/Form/ContributionPage/Amount.tpl
 msgid ""
@@ -4349,15 +4349,15 @@ msgstr "Redovi sa konfliktnim ID brojevima donacija... (NISU ažurirani)."
 
 #: templates/CRM/Contribute/Import/Form/Summary.tpl
 msgid "Download Mismatched Contributions"
-msgstr ""
+msgstr "Preuzmi donacije koje se ne slažu"
 
 #: templates/CRM/Contribute/Import/Form/Summary.tpl
 msgid "Rows which are duplicates of existing CiviCRM contribution records."
-msgstr ""
+msgstr "Redovi koji su duplikati postojećih zapisa o donacijama u CiviCRMu."
 
 #: templates/CRM/Contribute/Import/Form/Summary.tpl
 msgid "Total number of rows imported successfully."
-msgstr ""
+msgstr "Ukupan broj uspešno importovaih redova."
 
 #: templates/CRM/Contribute/Page/ContributionPage.hlp
 #: templates/CRM/Contribute/Page/ContributionPage.tpl
@@ -4366,7 +4366,7 @@ msgid ""
 "Contribution Pages. You can create different pages for different programs or"
 " campaigns - and customize text, amounts, types of information collected "
 "from contributors, etc."
-msgstr ""
+msgstr "CiviContribute dozvoljava da kreirate i održavate proizvoljni broj stranica za online donacije. Možete kreirati različite stranice za različite donacije ili kampanje - prilagoditi tekst, sume, tipove informacija koje prikupljate od donatora, itd."
 
 #: templates/CRM/Contribute/Page/ContributionPage.hlp
 msgid "For existing pages"
@@ -4376,7 +4376,7 @@ msgstr "Za postojeće stranice"
 msgid ""
 "Click <strong>Configure</strong> to view and modify settings, amounts, and "
 "text for existing pages."
-msgstr ""
+msgstr "Kliknite na <strong>Konfiguraciju</strong> da pogledate i izmenite podešavanja, sume i tekst za postojeće stranice."
 
 #: templates/CRM/Contribute/Page/ContributionPage.hlp
 msgid ""
@@ -4415,7 +4415,7 @@ msgstr "ili možete  <a href='%1'>pregledati sve dostupne stranice za doniranje<
 msgid ""
 "No contribution pages have been created yet. Click <a accesskey=\"N\" "
 "href='%1'>here</a> to create a new contribution page."
-msgstr ""
+msgstr "Nema kreiranih stranica za donacije. Kliknite <a accesskey=\"N\" href='%1'>ovde</a> da kreirate novu stranicu za donacije."
 
 #: templates/CRM/Contribute/Page/ContributionRecur.tpl
 msgid "Cycle Day"
@@ -4452,7 +4452,7 @@ msgstr "Vidi povezanu donaciju"
 
 #: templates/CRM/Contribute/Page/ContributionTotals.tpl
 msgid "Current Year-to-Date"
-msgstr ""
+msgstr "Ove godine do danas"
 
 #: templates/CRM/Contribute/Page/ContributionTotals.tpl
 msgid "# Completed Contributions"
@@ -4514,7 +4514,7 @@ msgstr "vidi detalje"
 
 #: templates/CRM/Contribute/Page/DashBoard.tpl
 msgid "Current Fiscal Year-To-Date"
-msgstr ""
+msgstr "Ove fiskalne godine do danas"
 
 #: templates/CRM/Contribute/Page/DashBoard.tpl
 msgid "Contribution Summary"
@@ -4530,7 +4530,7 @@ msgstr ""
 
 #: templates/CRM/Contribute/Page/DashBoard.tpl
 msgid "Recent Contributions"
-msgstr ""
+msgstr "Poslednje donacije"
 
 #: templates/CRM/Contribute/Page/ManagePremiums.tpl
 msgid ""
@@ -4578,15 +4578,15 @@ msgstr "Kampanja se završava"
 
 #: templates/CRM/Contribute/Page/PcpUserDashboard.tpl
 msgid "Preview your Personal Campaign Page"
-msgstr ""
+msgstr "Pogledaj svoju stranicu lične kampanje"
 
 #: templates/CRM/Contribute/Page/PcpUserDashboard.tpl
 msgid "You do not have any active Personal Campaign pages."
-msgstr ""
+msgstr "Nemate aktivnih stranica lične kampanje."
 
 #: templates/CRM/Contribute/Page/PcpUserDashboard.tpl
 msgid "Create a Personal Campaign Page for another campaign:"
-msgstr ""
+msgstr "Kreiraj stranicu lične kampanje za drugu kampanju:"
 
 #: templates/CRM/Contribute/Page/PcpUserDashboard.tpl
 msgid "Become a supporter by creating a Personal Campaign Page:"
@@ -4689,7 +4689,7 @@ msgstr ""
 
 #: templates/CRM/Contribute/Page/Tab.tpl
 msgid "Submit Credit Card Contribution"
-msgstr ""
+msgstr "Pošalji donaciju kreditnom karticom"
 
 #: templates/CRM/Contribute/Page/Tab.tpl
 msgid "No contributions have been recorded from this contact."
@@ -4714,7 +4714,7 @@ msgstr "Nema zabeleženih donacija za vas."
 
 #: templates/CRM/Contribute/Page/UserDashboard.tpl
 msgid "Contributions made in your honor"
-msgstr ""
+msgstr "Donacije u vaše ime."
 
 #: templates/CRM/Contribute/Page/UserDashboard.tpl
 msgid "Recurring Contribution(s)"
@@ -4788,13 +4788,13 @@ msgstr "Priznanica za donaciju"
 
 #: xml/templates/message_templates/contribution_online_receipt_html.tpl
 msgid "Total Tax"
-msgstr ""
+msgstr "Ukupan porez"
 
 #: xml/templates/message_templates/contribution_online_receipt_html.tpl
 msgid ""
 "This is a recurring contribution. You can cancel future contributions by <a "
 "href=\"%1\">visiting this web page</a>."
-msgstr ""
+msgstr "Ovo je periodična donacija. Buduće donacije možete otkazati odlaskom na <a href=\"%1\">ovu veb stranu</a>."
 
 #: xml/templates/message_templates/contribution_online_receipt_html.tpl
 #: xml/templates/message_templates/contribution_recurring_notify_html.tpl
@@ -4802,7 +4802,7 @@ msgstr ""
 msgid ""
 "You can update billing details for this recurring contribution by <a "
 "href=\"%1\">visiting this web page</a>."
-msgstr ""
+msgstr "Detalje naplate za ovu periodičnu donaciju možete ažurirati odlaskom na <a href=\"%1\">ovu veb stranu</a>"
 
 #: xml/templates/message_templates/contribution_online_receipt_html.tpl
 #: xml/templates/message_templates/contribution_recurring_notify_text.tpl
@@ -4810,29 +4810,29 @@ msgid ""
 "You can update recurring contribution amount or change the number of "
 "installments for this recurring contribution by <a href=\"%1\">visiting this"
 " web page</a>."
-msgstr ""
+msgstr "Možete ažurirati sumu za periodičnu donaciju ili izmeniti njen broj rata odlaskom na <a href=\"%1\">ovu veb stranu</a>."
 
 #: xml/templates/message_templates/contribution_online_receipt_text.tpl
 msgid ""
 "This is a recurring contribution. You can cancel future contributions at:"
-msgstr ""
+msgstr "Ovo je periodična donacija. Buduće donacije možete otkazati na:"
 
 #: xml/templates/message_templates/contribution_online_receipt_text.tpl
 msgid "You can update billing details for this recurring contribution at:"
-msgstr ""
+msgstr "Detalje naplate za ovu periodičnu donaciju možete ažurirati na:"
 
 #: xml/templates/message_templates/contribution_online_receipt_text.tpl
 msgid ""
 "You can update recurring contribution amount or change the number of "
 "installments for this recurring contribution at:"
-msgstr ""
+msgstr "Možete ažurirati sumu za periodičnu donaciju ili izmeniti njen broj rata na:"
 
 #: xml/templates/message_templates/contribution_recurring_billing_html.tpl
 #: xml/templates/message_templates/contribution_recurring_billing_text.tpl
 msgid ""
 "Billing details for your recurring contribution of %1, every %2 %3 have been"
 " updated."
-msgstr ""
+msgstr "Detalji naplate za periodičnu donaciju %1, svakog %2 %3 su ažurirani."
 
 #: xml/templates/message_templates/contribution_recurring_billing_subject.tpl
 msgid "Recurring Contribution Billing Updates"
@@ -4879,7 +4879,7 @@ msgstr "za %1 rata."
 #: xml/templates/message_templates/contribution_recurring_notify_html.tpl
 #: xml/templates/message_templates/contribution_recurring_notify_text.tpl
 msgid "Thanks for your auto renew membership sign-up."
-msgstr ""
+msgstr "Hvala vam na prijavi za automatsko obnavljanje članstva."
 
 #: xml/templates/message_templates/contribution_recurring_notify_html.tpl
 msgid "This membership will be automatically renewed every %1 %2(s). "
@@ -4888,7 +4888,7 @@ msgstr ""
 #: xml/templates/message_templates/contribution_recurring_notify_html.tpl
 #: xml/templates/message_templates/contribution_recurring_notify_text.tpl
 msgid "Thanks for your recurring contribution sign-up."
-msgstr ""
+msgstr "Hvala vam na prijavi za periodičnu donaciju."
 
 #: xml/templates/message_templates/contribution_recurring_notify_html.tpl
 #: xml/templates/message_templates/contribution_recurring_notify_text.tpl
@@ -4905,14 +4905,14 @@ msgstr "za ukupno %1 ratu(rata)"
 msgid ""
 " You can cancel the recurring contribution option by <a href=\"%1\">visiting"
 " this web page</a>."
-msgstr ""
+msgstr "Opciju za periodičnu donaciju možete otkazati odlaskom na <a href=\"%1\">ovu veb stranu</a>."
 
 #: xml/templates/message_templates/contribution_recurring_notify_html.tpl
 msgid ""
 "You can update recurring contribution amount or change the number of "
 "installments details for this recurring contribution by <a "
 "href=\"%1\">visiting this web page</a>."
-msgstr ""
+msgstr "Možete ažurirati sumu za periodičnu donaciju ili izmeniti detalje o broju rata odlaskom na <a href=\"%1\">ovu veb stranu</a>."
 
 #: xml/templates/message_templates/contribution_recurring_notify_html.tpl
 #: xml/templates/message_templates/contribution_recurring_notify_text.tpl
@@ -4950,7 +4950,7 @@ msgstr ""
 msgid ""
 "You can cancel the recurring contribution option by <a href=\"%1\">visiting "
 "this web page</a>."
-msgstr ""
+msgstr "Opciju za periodičnu donaciju možete otkazati odlaskom na <a href=\"%1\">ovu veb stranu</a>."
 
 #: xml/templates/message_templates/test_preview_html.tpl
 #: xml/templates/message_templates/test_preview_text.tpl
@@ -5023,7 +5023,7 @@ msgstr ""
 
 #: CRM/Contribute/DAO/PremiumsProduct.php
 msgid "Product"
-msgstr ""
+msgstr "Proizvod"
 
 #: CRM/Contribute/DAO/Widget.php
 msgid "Widget ID"
@@ -5043,19 +5043,19 @@ msgstr "URL naslovne strane"
 
 #: CRM/Contribute/DAO/Widget.php
 msgid "Title Color"
-msgstr ""
+msgstr "Boja naslova"
 
 #: CRM/Contribute/DAO/Widget.php
 msgid "Button Colour"
-msgstr ""
+msgstr "Boja dugmeta"
 
 #: CRM/Contribute/DAO/Widget.php
 msgid "Bar Color"
-msgstr ""
+msgstr "Boja trake"
 
 #: CRM/Contribute/DAO/Widget.php
 msgid "Main Text Color"
-msgstr ""
+msgstr "Boja glavnog teksta"
 
 #: CRM/Contribute/DAO/Widget.php
 msgid "Main Colour"
@@ -5071,15 +5071,15 @@ msgstr ""
 
 #: CRM/Contribute/DAO/Widget.php
 msgid "About Link Colour"
-msgstr ""
+msgstr "Boja linka O nama"
 
 #: CRM/Contribute/DAO/Widget.php
 msgid "Homepage Link Colour"
-msgstr ""
+msgstr "Boja linka za naslovnu"
 
 #: CRM/Contribute/Form/AdditionalInfo.php
 msgid "-select product-"
-msgstr ""
+msgstr "-izaberite proizvod-"
 
 #: CRM/Contribute/Form/CloseAccPeriod.php
 msgid "Accounting Period to Close"
@@ -5095,7 +5095,7 @@ msgstr ""
 
 #: CRM/Contribute/Form/Contribution/Confirm.php
 msgid "Payment Processor Error message :"
-msgstr ""
+msgstr "Poruka greške procesora uplata:"
 
 #: CRM/Contribute/Form/Contribution/Confirm.php
 msgid "Online Contribution:"
@@ -5109,7 +5109,7 @@ msgstr ""
 msgid ""
 "This page does not have any price fields configured or you may not have "
 "permission for them. Please contact the site administrator for more details."
-msgstr ""
+msgstr "Ova stranica nema podešenih polja cena ili vi nemate dozvolu za njih. Kontaktirajte administratora sajta za više detalja."
 
 #: CRM/Contribute/Form/Contribution/Main.php
 msgid "Confirm Payment"
@@ -5117,7 +5117,7 @@ msgstr "Potvrda uplate"
 
 #: CRM/Contribute/Form/Contribution/Main.php
 msgid "You cannot have auto-renewal on if you are paying later."
-msgstr ""
+msgstr "Ne možete imati automatsku obnovu ukoliko plaćate kasnije."
 
 #: CRM/Contribute/Form/Contribution.php CRM/Contribute/Selector/Search.php
 #: templates/CRM/Contribute/Form/Contribution.tpl
@@ -5135,7 +5135,7 @@ msgstr ""
 #: CRM/Contribute/Form/Contribution.php
 msgid ""
 "Contribution submitted by a staff person using contributor's credit card"
-msgstr ""
+msgstr "Donacija poslata od strane zaposlenog koristeći kreditnu karticu donatora"
 
 #: CRM/Contribute/Form/ContributionBase.php
 msgid "Invalid Membership"
@@ -5163,7 +5163,7 @@ msgstr "Dan donacije"
 
 #: CRM/Contribute/Form/ContributionPage/Amount.php
 msgid "Recurring Contribution Start Date Default"
-msgstr ""
+msgstr "Podrazumevani datum početka periodične donacije"
 
 #: CRM/Contribute/Form/ContributionPage/Amount.php
 msgid "Allow Edits to Recurring Donation Start date?"
@@ -5220,7 +5220,7 @@ msgid ""
 "CiviCRM > Customize Data and Screens > CiviCRM Profile to configure a "
 "Profile. Consult the online Administrator documentation for more "
 "information."
-msgstr ""
+msgstr "Moraćete da kreirate Profil koji sadrži %1 polja koja želite da uredite pre nego što možete koristiti opciju Ažuriraj više donacija. Idite na Administriraj CiviCRM > Sopstvena podešavanja podataka i ekrana > CiviCRM Profil da biste podesili profil. Za više informacija pogledajte dokumentaciju za online administratora."
 
 #: CRM/Contribute/Form/Task/Status.php
 msgid ""
@@ -5247,7 +5247,7 @@ msgstr "Eksport donacija"
 
 #: CRM/Contribute/Task.php
 msgid "Update pending contribution status"
-msgstr ""
+msgstr "Ažuriraj status donacije na čekanju"
 
 #: CRM/Contribute/Task.php
 msgid "Receipts - print or email"
@@ -5293,7 +5293,7 @@ msgstr "Obriši metod plaćanja"
 
 #: templates/CRM/Contribute/Form/Selector.tpl
 msgid "Click arrow to view payment details."
-msgstr ""
+msgstr "Kliknite na strelicu da vidite detalje uplate."
 
 #: templates/CRM/Contribute/Page/ContributionSoft.tpl
 msgid "Total Cancelled Soft Credits"
@@ -5311,7 +5311,7 @@ msgstr "Prosek"
 msgid ""
 "Note: if the correct payment method is not listed here (e.g. for in-kind "
 "donations) ask your administrator to add a new option to this list."
-msgstr ""
+msgstr "Beleška: Ukoliko ne postoji tačan metod plaćanja u ovoj listi (npr. za donacije u naturi) možete pitati vašeg administratora da doda novu opciju."
 
 #: templates/CRM/Contribute/Page/UserDashboard.tpl
 msgid "Pay Now"
@@ -5331,7 +5331,7 @@ msgstr "Broj profakture:"
 
 #: xml/templates/message_templates/contribution_invoice_receipt_html.tpl
 msgid "Reference:"
-msgstr ""
+msgstr "Referenca:"
 
 #: xml/templates/message_templates/contribution_invoice_receipt_html.tpl
 msgid "Amount %1"
@@ -5379,7 +5379,7 @@ msgstr ""
 
 #: xml/templates/message_templates/contribution_invoice_receipt_html.tpl
 msgid "To: "
-msgstr ""
+msgstr "Za:"
 
 #: xml/templates/message_templates/contribution_invoice_receipt_html.tpl
 msgid "Customer: "
@@ -5399,7 +5399,7 @@ msgstr "Preostali dug:"
 
 #: xml/templates/message_templates/contribution_invoice_receipt_html.tpl
 msgid "Due Date:  "
-msgstr ""
+msgstr "Krajnji rok:"
 
 #: xml/templates/message_templates/contribution_invoice_receipt_html.tpl
 msgid "CREDIT NOTE"
