po: update po/sr_RS@latin/common-base.po (pulled from Transifex.net by CiviCRM l10n maintainer)

--- a/po/sr_RS@latin/common-base.po
+++ b/po/sr_RS@latin/common-base.po
@@ -10,8 +10,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2016-10-05 11:33-0400\n"
-"PO-Revision-Date: 2017-02-28 09:53+0000\n"
-"Last-Translator: Marinela Panić <marinela@catalystbalkans.org>\n"
+"PO-Revision-Date: 2017-03-01 14:21+0000\n"
+"Last-Translator: Đorđe Kolaković <djordje@catalystbalkans.org>\n"
 "Language-Team: Serbian (Latin) (Serbia) (http://www.transifex.com/civicrm/civicrm/language/sr_RS@latin/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -2562,7 +2562,7 @@ msgstr "URL Slike tipa kontakta"
 
 #: CRM/Contact/DAO/ContactType.php
 msgid "Contact Type Parent"
-msgstr ""
+msgstr "Nadređeni tip kontakta"
 
 #: CRM/Contact/DAO/ContactType.php
 msgid "Contact Type Is Active?"
@@ -2716,7 +2716,7 @@ msgstr ""
 
 #: CRM/Contact/DAO/GroupNesting.php
 msgid "Child Group"
-msgstr ""
+msgstr "Podređena grupa"
 
 #: CRM/Contact/DAO/GroupNesting.php
 msgid "Parent Group"
@@ -11043,7 +11043,7 @@ msgstr "Vidljivost"
 
 #: CRM/Group/Form/Edit.php
 msgid "Make sure at least one parent group is set."
-msgstr ""
+msgstr "Podesite barem jednu nadređenu grupu."
 
 #: CRM/Group/Form/Edit.php
 msgid "Group Deleted"
@@ -17266,13 +17266,13 @@ msgstr "%1 je trenutno uključen u sledećoj smart grupi (grupama) (npr. sačuva
 #: templates/CRM/Contact/Page/View/ContactSmartGroup.tpl
 #: templates/CRM/Group/Form/ParentGroups.tpl
 msgid "Parent Groups"
-msgstr ""
+msgstr "Nadređene grupe"
 
 #: templates/CRM/Contact/Page/View/ContactSmartGroup.tpl
 msgid ""
 "%1 is included in these Parent group(s) based on belonging to group(s) which are their\n"
 "        children."
-msgstr ""
+msgstr "%1 je uključen u sledećoj nadređenoj grupi (ili grupama) zasnovano na pripadnosti grupi (grupama) koje su im \npodređene."
 
 #: templates/CRM/Contact/Page/View/CustomData.tpl
 #: templates/CRM/Profile/Form/Dynamic.tpl
@@ -18599,11 +18599,11 @@ msgstr "<div class=\"status messages\">Nema kreiranih grupa za ovaj sajt."
 
 #: templates/CRM/Group/Form/Search.tpl
 msgid "show child groups"
-msgstr ""
+msgstr "prikaži podređene grupe"
 
 #: templates/CRM/Group/Form/Search.tpl
 msgid "hide child groups"
-msgstr ""
+msgstr "sakrij podređene grupe"
 
 #: templates/CRM/Group/Page/Group.hlp
 msgid ""
