--- a/po/sr_RS@latin/admin.po
+++ b/po/sr_RS@latin/admin.po
@@ -9,7 +9,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2016-10-05 11:33-0400\n"
-"PO-Revision-Date: 2017-02-27 15:54+0000\n"
+"PO-Revision-Date: 2017-03-01 15:15+0000\n"
 "Last-Translator: Đorđe Kolaković <djordje@catalystbalkans.org>\n"
 "Language-Team: Serbian (Latin) (Serbia) (http://www.transifex.com/civicrm/civicrm/language/sr_RS@latin/)\n"
 "MIME-Version: 1.0\n"
@@ -637,7 +637,7 @@ msgstr "Podešavanje CiviCampaign komponenata"
 
 #: CRM/Admin/Form/Preferences/Campaign.php
 msgid "Tag for Unconfirmed Petition Signers"
-msgstr ""
+msgstr "Tag za nepotvrđene potpisnike peticije"
 
 #: CRM/Admin/Form/Preferences/Campaign.php
 msgid ""
@@ -849,7 +849,7 @@ msgstr "Uključi globalno zaključavanje na serveru za CiviMail"
 
 #: CRM/Admin/Form/Preferences/Mailing.php
 msgid "Enable CiviMail to generate Message-ID header"
-msgstr ""
+msgstr "Uključi mogućnost CiviMaila da generiše zaglavlje IDa poruke"
 
 #: CRM/Admin/Form/Preferences/Mailing.php
 msgid "Enable CiviMail to create activities on delivery"
@@ -1153,7 +1153,7 @@ msgid ""
 "This will make your CiviCRM installation a single-language one again. THIS "
 "WILL DELETE ALL DATA RELATED TO LANGUAGES OTHER THAN THE DEFAULT ONE "
 "SELECTED ABOVE (and only that language will be preserved)."
-msgstr ""
+msgstr "Ovo će promeniti vašu CiviCRM instalaciju u jednojezičnu. OVO BRIŠE SVE PODATKE OSIM PODATAKA ZA PODRAZUMEVANI JEZIK ODABRAN IZNAD (samo taj jezik će biti sačuvan)."
 
 #: CRM/Admin/Form/Setting/Localization.php
 msgid "Return to Single Language"
@@ -3197,7 +3197,7 @@ msgstr "Upozorenje: Brisanjem ove opcije će doći do gubitka svih zapisa veze o
 msgid ""
 "Label for the relationship from Contact A to Contact B. EXAMPLE: Contact A "
 "is 'Parent of' Contact B."
-msgstr ""
+msgstr "Oznaka za vezu od kontakta A do kontakta B. PRIMER: Kontakt A je 'Nadređen' kontaktu B."
 
 #: templates/CRM/Admin/Form/RelationshipType.tpl
 msgid ""
@@ -3850,7 +3850,7 @@ msgstr "reCAPTCHA je besplatan servis koji sprečava automatizovanu zloupotrebu 
 msgid ""
 "You can specify the reCAPTCHA theme options as comma separated data.(eg: "
 "theme:'blackglass', lang : 'fr' )."
-msgstr ""
+msgstr "Možete odrediti opcije teme za reCAPTCHA kao podatke odvojene zarezima. (npr: theme:'blackglass', lang : 'fr' )."
 
 #: templates/CRM/Admin/Form/Setting/Miscellaneous.tpl
 msgid ""
@@ -4013,7 +4013,7 @@ msgid ""
 "If you choose Redirect to Database, all emails will be recorded as archived "
 "mailings instead of being sent out. They can be found in the "
 "civicrm_mailing_spool table in the CiviCRM database."
-msgstr ""
+msgstr "Ukoliko izaberete Preusmeri u bazu podataka, svi emailovi će biti snimljeni kao arhivirani umesto slanja. Možete ih naći u tabeli civicrm_mailing_spool u CiviCRM bazi podataka."
 
 #: templates/CRM/Admin/Form/Setting/Smtp.tpl
 msgid "SMTP Configuration"
@@ -4104,7 +4104,7 @@ msgid ""
 "For Drupal and WordPress installs, this is the absolute path to the location"
 " of the 'files' directory. For Joomla installs this is the absolute path to "
 "the location of the 'media' directory."
-msgstr ""
+msgstr "Za Drupal i WordPress instalacije, ovo je apsolutna putanja do lokacije 'files' direktorijuma. Za Joomla instalacije, ovo je apsolutna putanja do lokacije 'media' direktorijuma."
 
 #: templates/CRM/Admin/Form/Setting/UpdateConfigBackend.tpl
 msgid "Old Base URL"
@@ -4794,7 +4794,7 @@ msgstr "Moraćete da promenite dozvole u Drupalu kako bi anonimni korisnici mogl
 
 #: templates/CRM/Admin/Page/ConfigTaskList.tpl
 msgid "System Workflow Templates"
-msgstr ""
+msgstr "Šabloni za sistemski tok rada"
 
 #: templates/CRM/Admin/Page/ConfigTaskList.tpl
 msgid ""
@@ -5250,7 +5250,7 @@ msgstr ""
 
 #: templates/CRM/Admin/Page/MessageTemplates.tpl
 msgid "You are viewing the default message template for this system workflow."
-msgstr ""
+msgstr "Trenutno gledate podrazumevani šablon poruke za ovaj sistemski tok rada."
 
 #: templates/CRM/Admin/Page/MessageTemplates.tpl
 msgid "User-driven Messages"
@@ -5258,7 +5258,7 @@ msgstr ""
 
 #: templates/CRM/Admin/Page/MessageTemplates.tpl
 msgid "System Workflow Messages"
-msgstr ""
+msgstr "Poruke za sistemski tok rada"
 
 #: templates/CRM/Admin/Page/MessageTemplates.tpl
 msgid ""
