po: update po/fr_CA/financial.po (pulled from Transifex.net by CiviCRM l10n maintainer)

--- a/po/fr_CA/financial.po
+++ b/po/fr_CA/financial.po
@@ -3,16 +3,17 @@
 # If you contribute heavily to a translation and deem your work copyrightable,
 # make sure you license it to CiviCRM LLC under Academic Free License 3.0.
 # Translators:
-# Mathieu Lutfy <mathieu@bidon.ca>, 2014-2016
+# Mathieu Lu <mathieu@bidon.ca>, 2017
+# Mathieu Lu <mathieu@bidon.ca>, 2014-2016
 # Pierre Mathieu <pierrem7@gmail.com>, 2013-2014
 # Pierre Mathieu <pierrem7@gmail.com>, 2013
-# Rick Paré <rick.pare69@gmail.com>, 2016
+# Rick Paré, 2016
 msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2016-10-05 11:33-0400\n"
-"PO-Revision-Date: 2016-11-04 18:34+0000\n"
-"Last-Translator: Rick Paré <rick.pare69@gmail.com>\n"
+"PO-Revision-Date: 2017-03-02 01:52+0000\n"
+"Last-Translator: Mathieu Lu <mathieu@bidon.ca>\n"
 "Language-Team: French (Canada) (http://www.transifex.com/civicrm/civicrm/language/fr_CA/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -913,13 +914,13 @@ msgid ""
 "used types such as Donation, Campaign Contribution or Membership Dues.  "
 "Additionally, financial types can account for the inventory and expense of "
 "<a href=\"%1\">premiums</a>."
-msgstr "Les types financiers sont utilisés pour classer les contributions de déclaration et de comptabilité fins. Vous pouvez configurer autant que nécessaire, y compris les types couramment utilisés comme don, campagne contribution ou cotisation. En outre, les types financiers peuvent représenter pour l'inventaire et le coût des primes <a href=\"%1\"> </ a>."
+msgstr "Les types financiers sont utilisés pour catégoriser les contributions dans les rapports et à des fins de comptabilité. Vous pouvez configurer autant de types que nécessaire, y compris les types couramment utilisés pour les dons, campagnes contributions ou pour les cotisations de membres. En outre, les types financiers peuvent aider à gérer l'inventaire et le coût des <a href=\"%1\">primes</a>."
 
 #: templates/CRM/Financial/Page/FinancialType.tpl
 msgid ""
 "Each financial type relates to a number of <a href=\"%1\">financial "
 "accounts</a> to track income, accounts receivable, and fees.</p>"
-msgstr "Chaque type financier se rapporte à un certain nombre de <a href=\"%1\"> comptes financiers </ a> pour suivre les revenus, les comptes débiteurs et les frais. </ P>"
+msgstr "Chaque type financier est relié à un certain nombre de <a href=\"%1\">comptes financiers</a> pour suivre les revenus, les comptes débiteurs et les frais.</p>"
 
 #: templates/CRM/Financial/Page/FinancialTypeAccount.tpl
 msgid "Assign Account"
