po: update po/sr_RS@latin/report.po (pulled from Transifex.net by CiviCRM l10n maintainer)

--- a/po/sr_RS@latin/report.po
+++ b/po/sr_RS@latin/report.po
@@ -9,7 +9,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2016-10-05 11:33-0400\n"
-"PO-Revision-Date: 2017-02-21 12:43+0000\n"
+"PO-Revision-Date: 2017-03-01 14:52+0000\n"
 "Last-Translator: Marinela Panić <marinela@catalystbalkans.org>\n"
 "Language-Team: Serbian (Latin) (Serbia) (http://www.transifex.com/civicrm/civicrm/language/sr_RS@latin/)\n"
 "MIME-Version: 1.0\n"
@@ -104,11 +104,11 @@ msgstr ""
 
 #: CRM/Report/Form/Activity.php
 msgid "Target Contact Name"
-msgstr ""
+msgstr "Ime ciljanog kontakta"
 
 #: CRM/Report/Form/Activity.php
 msgid "Limit To Current User"
-msgstr ""
+msgstr "Ograniči na trenutnog korisnika"
 
 #: CRM/Report/Form/Activity.php
 msgid "Source Contact Email"
@@ -120,7 +120,7 @@ msgstr ""
 
 #: CRM/Report/Form/Activity.php
 msgid "Target Contact Email"
-msgstr ""
+msgstr "Email ciljanog kontakta"
 
 #: CRM/Report/Form/Activity.php
 msgid "Include Case Activities"
@@ -192,7 +192,7 @@ msgstr ""
 
 #: CRM/Report/Form/Campaign/SurveyDetails.php
 msgid "Respondent Name"
-msgstr ""
+msgstr "Ime ispitanika"
 
 #: CRM/Report/Form/Campaign/SurveyDetails.php
 msgid "Odd / Even Street Number"
@@ -200,7 +200,7 @@ msgstr "Paran / Neparan broj ulice"
 
 #: CRM/Report/Form/Campaign/SurveyDetails.php
 msgid "Respondent Status"
-msgstr ""
+msgstr "Status ispitanika"
 
 #: CRM/Report/Form/Case/Demographics.php
 msgid "Birthdate"
@@ -599,7 +599,7 @@ msgstr "Ukupno primarnog kontakta(kontakata)"
 
 #: CRM/Report/Form/Contribute/History.php
 msgid "Value for filters 'This Year' and 'Other Years' can not be same."
-msgstr ""
+msgstr "Vrednost za filtere 'Ove godine' i 'Ostalih godina' ne može biti ista."
 
 #: CRM/Report/Form/Contribute/History.php
 #: CRM/Report/Form/Contribute/Lybunt.php CRM/Report/Form/Contribute/Sybunt.php
@@ -1010,15 +1010,15 @@ msgstr ""
 
 #: CRM/Report/Form/Extended.php
 msgid "Price Field Value Label"
-msgstr ""
+msgstr "Oznaka vrednosti polja za cenu"
 
 #: CRM/Report/Form/Extended.php
 msgid "Price Fields Value Label"
-msgstr ""
+msgstr "Oznaka vrednosti polja za cenu"
 
 #: CRM/Report/Form/Extended.php
 msgid "Price Field Label"
-msgstr ""
+msgstr "Oznaka polja za cenu"
 
 #: CRM/Report/Form/Extended.php CRM/Report/Form/Member/Lapse.php
 #: CRM/Report/Form/Membership/Summary.php
@@ -1160,7 +1160,7 @@ msgstr "ACL grupa/uloga"
 
 #: CRM/Report/Form/Instance.php
 msgid "Parent Menu"
-msgstr ""
+msgstr "Nadređeni meni"
 
 #: CRM/Report/Form/Instance.php
 msgid "Save Report"
@@ -1276,7 +1276,7 @@ msgstr "Statistike"
 
 #: CRM/Report/Form/Member/ContributionDetail.php
 msgid "No Bulk Email(Is Opt Out)"
-msgstr ""
+msgstr "Bez masovnih mailova (isključio se)"
 
 #: CRM/Report/Form/Member/ContributionDetail.php
 msgid "First Contribution Date"
@@ -1350,7 +1350,7 @@ msgstr ""
 
 #: CRM/Report/Form/Membership/Summary.php
 msgid "Membership Summary Report"
-msgstr ""
+msgstr "Izveštaj - kratak pregled članstva"
 
 #: CRM/Report/Form/Membership/Summary.php CRM/Report/Form.php
 msgid "Row(s) Listed"
@@ -1494,7 +1494,7 @@ msgstr "Sortiranje"
 
 #: CRM/Report/Form.php
 msgid "Order by Section"
-msgstr ""
+msgstr "Poređaj po sekciji"
 
 #: CRM/Report/Form.php templates/CRM/Report/Form/Tabs/OrderBy.tpl
 msgid "Page Break"
@@ -1827,7 +1827,7 @@ msgid ""
 "WARNING: Deleting this option will result in the loss of all Report related "
 "records which use the option. This may mean the loss of a substantial amount"
 " of data, and the action cannot be undone. Do you want to continue?"
-msgstr ""
+msgstr "Upozorenje: Brisanjem ove opcije će doći do gubitka svih zapisa povezanih sa izveštajima koji koriste ovu opciju. Ovo može značiti gubitak znatne količine podataka, a ova operacija je nepovratna. Da li želite da nastavite?"
 
 #: templates/CRM/Report/Form/Register.tpl
 msgid "Report title appear in the display screen."
@@ -1916,7 +1916,7 @@ msgid ""
 "reports list when they click the 'Reports Listing' menu. The title should "
 "reflect the report's default criteria. EXAMPLE: Activity Report - Current "
 "Month"
-msgstr ""
+msgstr "Ovaj naslov i opis će se prikazivati korisnicima u listi izveštaja kada kliknu na meni 'Listing izveštaja'. Naslov treba da se odnosi na podrazumevane kriterijume izveštaja. Primer: Izveštaj aktivnosti - tekući mesec"
 
 #: templates/CRM/Report/Form/Tabs/Settings.hlp
 msgid ""
@@ -1970,7 +1970,7 @@ msgstr ""
 
 #: templates/CRM/Report/Form/Tabs/Settings.hlp
 msgid "Limit Rows per Page in Dashboard"
-msgstr ""
+msgstr "Ograniči broj redova po stranici na kontrolnoj tabli"
 
 #: templates/CRM/Report/Form/Tabs/Settings.hlp
 msgid ""
@@ -1979,7 +1979,7 @@ msgid ""
 "can reduce the number of rows included in each page when the report is part "
 "of the Dashboard by entering the desired row count here. Users will still be"
 " able to navigate through the full report using a pager."
-msgstr ""
+msgstr "Podrazumevani broj redova po stranici za većinu izveštaja je 50. Međutim, ovo može biti previše za izveštaj koji će se nalaziti na 'NAslovnoj kontrolnoj tabli'. Možete smanjiti broj redova koji će se nalaziti na svakoj strani kada je izveštaj deo kontrolne table, tako što ćete ovde uneti željeni broj redova. Korisnici će i dalje moći da se kreću kroz ceo izveštaj koristeći deo za kontrolu stranica."
 
 #: templates/CRM/Report/Form/Tabs/Settings.hlp
 msgid ""
@@ -2038,7 +2038,7 @@ msgid ""
 "Create reports for your users from any of the report templates listed below."
 " Click on a template title to get started. Click Existing Report(s) to see "
 "any reports that have already been created from that template."
-msgstr ""
+msgstr "Kreirajte izveštaje za vaše korisnike koristeći neki od šablona ispod. Kliknite na naslov šablona da počnete. Kliknite na Postojeće izveštaj(e) da vidite izveštaje koji su već kreirani na osnovu tog šablona."
 
 #: templates/CRM/Report/Page/TemplateList.tpl
 msgid "Create report from this template"
@@ -2079,7 +2079,7 @@ msgstr "Da li ste sigurni da želite da obrišete ovaj izveštaj? Ova akcija je 
 
 #: CRM/Report/Form/Activity.php
 msgid "Source Name"
-msgstr ""
+msgstr "Ime izvora"
 
 #: CRM/Report/Form/Activity.php
 msgid "Assignee Name"
@@ -2267,7 +2267,7 @@ msgstr "Registracija po IDu učesnika"
 
 #: CRM/Report/Form/Event/ParticipantListing.php
 msgid "Participant Fee"
-msgstr ""
+msgstr "Kotizacija"
 
 #: CRM/Report/Form/Instance.php
 msgid "Configure link to..."
@@ -2401,7 +2401,7 @@ msgstr "Link ka"
 msgid ""
 "If set to Yes, this report will appear in the My Reports section of the "
 "reports listing page and will only be visible by you."
-msgstr ""
+msgstr "Ukoliko je ova opcija podešena na Da, ovaj izveštaj će se prikazivati u sekciji Moji izveštaji stranice listinga izveštaja i biće vidljiv samo vama."
 
 #: templates/CRM/Report/Form/Tabs/Instance.tpl
 msgid "rows"
