--- a/po/sr_RS@latin/pcp.po
+++ b/po/sr_RS@latin/pcp.po
@@ -9,8 +9,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2016-10-05 11:33-0400\n"
-"PO-Revision-Date: 2017-02-17 09:28+0000\n"
-"Last-Translator: Marinela Panić <marinela@catalystbalkans.org>\n"
+"PO-Revision-Date: 2017-03-01 14:46+0000\n"
+"Last-Translator: Đorđe Kolaković <djordje@catalystbalkans.org>\n"
 "Language-Team: Serbian (Latin) (Serbia) (http://www.transifex.com/civicrm/civicrm/language/sr_RS@latin/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -80,7 +80,7 @@ msgstr ""
 msgid ""
 "This contribution is being made thanks to the efforts of "
 "<strong>%1</strong>, who supports our campaign. "
-msgstr ""
+msgstr "Ova donacija je omogućena uz pomoć <strong>%1</strong>, koji/a podržava našu kampanju. "
 
 #: CRM/PCP/BAO/PCP.php
 msgid "Show my support in the public honor roll"
@@ -144,7 +144,7 @@ msgstr "%1 status je ažuriran na %2."
 
 #: CRM/PCP/BAO/PCP.php
 msgid "A notification email has been sent to the supporter."
-msgstr ""
+msgstr "Notifikacioni email je poslat."
 
 #: CRM/PCP/BAO/PCP.php
 msgid "Email Sent"
@@ -545,7 +545,7 @@ msgid ""
 " Page linked to this event is either created or updated. The notification "
 "will include links to view the campaign page as well as the contact record "
 "of the creator of the page."
-msgstr ""
+msgstr "Na ovu email adresu će biti poslata notifikacija kada god se stranica lične kampanje povezana sa događajem napravi ili ažurira. Notifikacija će sadržati linkovi za pregled ove stranice kampanje kao i zapis o kontaktu za osobu koja je napravila stranicu."
 
 #: templates/CRM/PCP/Form/Event.hlp
 msgid ""
@@ -588,7 +588,7 @@ msgstr ""
 msgid ""
 "You can also place additional links (or menu items) allowing constituents to"
 " create their own fundraising pages using the following URL:"
-msgstr ""
+msgstr "Možete ubaciti i dodatne linkove (ili delove menija) koji će dozvoliti onima koji vas podržavaju da naprave svoje stranice za prikupljanje sredstava koristeći sledeći URL:"
 
 #: templates/CRM/PCP/Form/PCP.tpl templates/CRM/PCP/Page/PCP.hlp
 msgid ""
@@ -745,7 +745,7 @@ msgstr "Primili ste donaciju na ličnoj stranici"
 #: xml/templates/message_templates/pcp_owner_notify_html.tpl
 #: xml/templates/message_templates/pcp_owner_notify_text.tpl
 msgid "Your fundraising total has been updated."
-msgstr ""
+msgstr "Vaša ukupna prikupljena suma je ažurirana."
 
 #: xml/templates/message_templates/pcp_owner_notify_html.tpl
 #: xml/templates/message_templates/pcp_owner_notify_text.tpl
@@ -809,7 +809,7 @@ msgstr ""
 #: xml/templates/message_templates/pcp_status_change_text.tpl
 msgid ""
 "After logging in, you can use this form to promote your fundraising page"
-msgstr ""
+msgstr "Nakon logovanja, možete koristiti ovaj formular da promovišete vašu stranicu za prikupljanje sredstava"
 
 #: xml/templates/message_templates/pcp_status_change_html.tpl
 #: xml/templates/message_templates/pcp_status_change_text.tpl
@@ -824,7 +824,7 @@ msgid ""
 "Your personal campaign page has been reviewed. There were some issues with "
 "the content which prevented us from approving the page. We are sorry for any"
 " inconvenience."
-msgstr ""
+msgstr "Vaša stranica lične kampanje je pregledana. Bilo je nekoliko problema sa sadržajem, koje su nas sprečile da stranicu odobrimo. Žao nam je zbog eventualnih neprijatnosti."
 
 #: xml/templates/message_templates/pcp_status_change_html.tpl
 #: xml/templates/message_templates/pcp_status_change_text.tpl
@@ -875,7 +875,7 @@ msgstr "Kliknite na ovaj link i pratite instrukcije"
 msgid ""
 "Send email to family, friends and colleagues with a personal message about "
 "this campaign."
-msgstr ""
+msgstr "Pošaljite email porodici, prijateljima i kolegama sa ličnom porukom vezanom za ovu kampanju."
 
 #: xml/templates/message_templates/pcp_supporter_notify_html.tpl
 #: xml/templates/message_templates/pcp_supporter_notify_text.tpl
