po: update po/sr_RS@latin/member.po (pulled from Transifex.net by CiviCRM l10n maintainer)

--- a/po/sr_RS@latin/member.po
+++ b/po/sr_RS@latin/member.po
@@ -9,7 +9,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2016-10-05 11:33-0400\n"
-"PO-Revision-Date: 2017-02-28 10:51+0000\n"
+"PO-Revision-Date: 2017-03-01 15:53+0000\n"
 "Last-Translator: Marinela Panić <marinela@catalystbalkans.org>\n"
 "Language-Team: Serbian (Latin) (Serbia) (http://www.transifex.com/civicrm/civicrm/language/sr_RS@latin/)\n"
 "MIME-Version: 1.0\n"
@@ -1252,7 +1252,7 @@ msgstr "Povezane donacije"
 #: templates/CRM/Member/Form/Membership.tpl
 #: templates/CRM/Member/Form/MembershipView.tpl
 msgid "Related Soft Contributions"
-msgstr ""
+msgstr "Povezane zasluge"
 
 #: templates/CRM/Member/Form/Membership.tpl
 #: templates/CRM/Member/Form/MembershipStandalone.js
@@ -1436,7 +1436,7 @@ msgstr ""
 msgid ""
 "Display the membership fee along with the membership name and description "
 "for each membership option?"
-msgstr ""
+msgstr "Prikaži cenu članstva uz ime članstva i opis za svaku opciju članstva? "
 
 #: templates/CRM/Member/Form/MembershipBlock.tpl
 msgid ""
@@ -1542,7 +1542,7 @@ msgstr "Prikaži ime za status ovog članstva (npr. Novo, trenutno, isteklo...).
 msgid ""
 "When does this status begin? EXAMPLE: <strong>New</strong> status begins at "
 "the membership 'join date'."
-msgstr ""
+msgstr "Kada ovaj status počinje? Primer: <strong>Novi</strong> status počinje 'datumom pristupanja' članstvu."
 
 #: templates/CRM/Member/Form/MembershipStatus.tpl
 msgid ""
@@ -1555,7 +1555,7 @@ msgstr ""
 msgid ""
 "When does this status end? EXAMPLE: <strong>Current</strong> status ends at "
 "the membership 'end date'."
-msgstr ""
+msgstr "Kada se ovaj status završava? Primer: <strong>Trenutni</strong> status se završava 'datumom završetka' članstva. "
 
 #: templates/CRM/Member/Form/MembershipStatus.tpl
 msgid ""
@@ -1673,7 +1673,7 @@ msgstr ""
 msgid ""
 "Membership signups on or after this day of the month cover the rest of the "
 "month plus the specified number of months."
-msgstr ""
+msgstr "Prijave za članstvo ovog ili nakon ovog dana u mesecu obuhvataju ostatak meseca plus određeni broj meseci."
 
 #: templates/CRM/Member/Form/MembershipType.tpl
 msgid ""
@@ -1702,7 +1702,7 @@ msgid ""
 "Configure membership renewal reminders using <a href=\"%1\">Schedule "
 "Reminders</a>. If you have previously configured renewal reminder templates,"
 " you can re-use them with your new scheduled reminders."
-msgstr ""
+msgstr "Podesite podsetnike za obnovu članstva koristeći <a href=\"%1\">Zakaži podsetnike</a>. Ukoliko ste prethodno već podesili šablone za podsetnike za obnovu članstva, možete ih ponovo koristiti u svom novom zakazanom podsetniku."
 
 #: templates/CRM/Member/Form/MembershipView.tpl
 msgid "View contact summary"
@@ -1768,7 +1768,7 @@ msgid ""
 "Memberships</strong> below to save all your changes. To set a field to the "
 "same value for ALL rows, enter that value for the first member and then "
 "click the <strong>Copy icon</strong> (next to the column title)."
-msgstr ""
+msgstr "Po potrebi ažurirajte vrednosti za svakog člana. Kliknite ispod na <strong>Ažuriraj članstva</strong> da sačuvate sve izmene. Da biste podesili istu vrednost za SVE redove, unesite vrednost za prvog člana i zatim kliknite na <strong>Ikonicu za kopiranje</strong> (pored naslova kolone)."
 
 #: templates/CRM/Member/Form/Task/Delete.tpl
 msgid ""
@@ -1996,7 +1996,7 @@ msgstr ""
 
 #: templates/CRM/Member/Page/DashBoard.tpl
 msgid "through %1"
-msgstr ""
+msgstr "preko %1"
 
 #: templates/CRM/Member/Page/DashBoard.tpl
 msgid "Current #"
