po: update po/sr_RS@latin/event.po (pulled from Transifex.net by CiviCRM l10n maintainer)

--- a/po/sr_RS@latin/event.po
+++ b/po/sr_RS@latin/event.po
@@ -9,8 +9,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2016-10-05 11:33-0400\n"
-"PO-Revision-Date: 2017-02-27 14:23+0000\n"
-"Last-Translator: Marinela Panić <marinela@catalystbalkans.org>\n"
+"PO-Revision-Date: 2017-03-01 08:58+0000\n"
+"Last-Translator: Đorđe Kolaković <djordje@catalystbalkans.org>\n"
 "Language-Team: Serbian (Latin) (Serbia) (http://www.transifex.com/civicrm/civicrm/language/sr_RS@latin/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -343,7 +343,7 @@ msgstr "Da li je ekran za potvrdu aktiviran?"
 
 #: CRM/Event/DAO/Event.php
 msgid "Parent Event ID"
-msgstr ""
+msgstr "ID nadređenog događaja"
 
 #: CRM/Event/DAO/Event.php
 msgid "Subevent Slot Label ID"
@@ -429,7 +429,7 @@ msgstr "Pošalji potvrdu?"
 
 #: CRM/Event/Form/ManageEvent/Conference.php
 msgid "Parent Event"
-msgstr ""
+msgstr "Nadređeni događaj"
 
 #: CRM/Event/Form/ManageEvent/Conference.php
 #: CRM/Event/Form/ManageEvent/TabHeader.php CRM/Event/Page/ManageEvent.php
@@ -676,7 +676,7 @@ msgstr "Poruka potvrde"
 
 #: CRM/Event/Form/ManageEvent/Registration.php
 msgid "Pending participant expiration (hours)"
-msgstr ""
+msgstr "Rok za učesnike na čekanju (u satima)"
 
 #: CRM/Event/Form/ManageEvent/Registration.php
 msgid "Please enter the number of hours (as an integer)."
@@ -3258,7 +3258,7 @@ msgstr "Događaj se ponavlja"
 
 #: templates/CRM/Event/Page/DashBoard.tpl
 msgid "Child"
-msgstr ""
+msgstr "Podređen"
 
 #: templates/CRM/Event/Page/DashBoard.tpl
 msgid "List %1 participants"
@@ -3365,7 +3365,7 @@ msgstr "Pristupite podacima koristeći HTTP GET zahtev sa URL-a. (Ovo je 'ICAL' 
 
 #: templates/CRM/Event/Page/ManageEvent.hlp
 msgid "The iCalendar Feed URL for CiviEvent on this site:"
-msgstr ""
+msgstr "URL iCalendar feed-a za CiviEvent na ovom sajtu:"
 
 #: templates/CRM/Event/Page/ManageEvent.hlp
 msgid ""
